# langchain-claude-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-02-16-claude-agent-chat-model-design.md  2026-02-16-claude-agent-chat-model-plan.md
langchain_claude_agent/: __init__.py  _tool_converter.py  _types.py  _utils.py  chat_model.py
notebooks/: 00_features.ipynb  01_react_agent_weather.ipynb  02_react_agent_weather_structured_output.ipynb  03_react_agent_weather_mcp.ipynb  features.ipynb  test_claude_agent_query.ipynb  weather_mcp_server.py
tests/: test_chat_model.py  test_tool_converter.py  test_utils.py
